<resources>
    <string name="app_name">RegularExpression</string>
    <string name="noNetwork">NOT_CONNECTED</string>
    <string name="Network">CONNECTED</string>
    <string name="title_activity_fuel_pop_up">fuel_pop_up</string>
    <string name="title_activity_login_new">LoginNewActivity</string>
    <string name="versionNumber">Version 1.1.1</string>
    <string name="copy_right_statement">Powered by TSI All rights reserved</string>
    <string name="invalid_username">Please enter a username</string>
    <string name="invalid_password">Please enter a password</string>
    <string name="app_login">Login</string>
    <string name="app_enter_username">Enter UserName</string>
    <string name="app_enter_password">Enter Password</string>
</resources>
