<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constrainmain"
    android:background="@drawable/loginbg"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toTopOf="@+id/constraintlayout_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageview_tsi_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="TSI Logo"
            android:paddingTop="24dp"
            android:paddingBottom="25dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/constraintlayout_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textview_enter_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintlayout_username">

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteColor"
                android:ellipsize="end"
                android:fontFamily="@font/averta_regular"
                android:hint="@string/app_enter_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/flightCompletedTaskListColor"
                android:textCursorDrawable="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/imageview_secure_entry"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageview_secure_entry"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/password_hide_icon"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.99"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.15" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintlayout_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_tsi_logo">

            <EditText
                android:id="@+id/edittext_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteColor"
                android:ellipsize="end"
                android:fontFamily="@font/averta_regular"
                android:hint="@string/app_enter_username"
                android:inputType="text"
                android:lines="1"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/flightCompletedTaskListColor"
                android:textCursorDrawable="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textview_enter_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_enter_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/averta_regular"
                android:paddingLeft="10dp"
                android:text="Username cannot be blank"
                android:textColor="@color/delay_red"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_username" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_enter_password">

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_button"
                android:fontFamily="@font/averta_bold"
                android:gravity="center"
                android:text="@string/app_login"
                android:textColor="@color/whiteColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/framelayout_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/custom_progress" />

                <TextView
                    android:id="@+id/text_view_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/averta_bold"
                    android:gravity="center"
                    android:text="LOADING..."
                    android:textColor="@color/white" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textview_enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/averta_regular"
            android:paddingLeft="10dp"
            android:text="Password cannot be blank"
            android:textColor="@color/delay_red"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/constraintlayout_login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintlayout_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintlayout_body">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageview_rapid_logo"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:layout_marginStart="48dp"
                android:layout_marginBottom="6dp"
                android:contentDescription="Rapid Logo"
                android:src="@drawable/rapidturn_logo"
                app:layout_constraintBottom_toTopOf="@+id/networkConnectionStatusTextview"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="48dp" />

            <TextView
                android:id="@+id/textview_rapid_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/averta_bold"
                android:text="@string/versionNumber"
                android:textColor="@color/whiteColor"
                android:textSize="10dp"
                app:layout_constraintBottom_toTopOf="@+id/textview_copy_rights"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="48dp" />

            <TextView
                android:id="@+id/textview_copy_rights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/averta_regular"
                android:text="@string/copy_right_statement"
                android:textColor="@color/whiteColor"
                android:textSize="8dp"
                app:layout_constraintBottom_toTopOf="@+id/networkConnectionStatusTextview"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="48dp" />

            <TextView
                android:id="@+id/networkConnectionStatusTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@color/delay_red"
                android:gravity="center"
                android:text="Sorry you are offline"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>